Resolve "fix sonarqube"